--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,3 +1,9 @@
 NODE_ENV=
 PORT=
-URL_DB_CONNECTION=
+BOOK_STORE_TABLE_NAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_SESSION_TOKEN=
+AWS_REGION=
+BACKEND_LOCAL_PORT=
+BACKEND_DOCKER_PORT=
