--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "dynamoose": "^3.2.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
