--- a/backend/package.json
+++ b/backend/package.json
@@ -20,16 +20,12 @@
     "dotenv": "^16.0.3",
     "dynamoose": "^3.2.0",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.0.0",
-    "mongoose": "^7.1.1"
+    "helmet": "^7.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/express-validator": "^3.0.0",
     "@types/helmet": "^4.0.0",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.1.4",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
