--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   backend:
     build: .
-    restart: unless-stopped
+    restart: always
     env_file: ./.env
     ports:
       - $BACKEND_LOCAL_PORT:$BACKEND_DOCKER_PORT
