--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   bikes-network-frontend:
     env_file: ./.env
-    restart: unless-stopped
+    restart: always
     build:
       context: .
       args:
